--- a/index.html
+++ b/index.html
@@ -1,1 +1,136 @@
-<!doctype html><html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/><title>Admin UI</title><script src="https://unpkg.com/react@18/umd/react.development.js"></script><script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script><script src="https://cdn.jsdelivr.net/npm/luxon@3/build/global/luxon.min.js"></script><style>body{font-family:system-ui;padding:24px}.row{display:flex;gap:8px;flex-wrap:wrap;align-items:center}input,select,button{padding:8px 10px;border-radius:8px;border:1px solid #ccc}table{width:100%;border-collapse:collapse}th,td{padding:8px;border-bottom:1px solid #eee}.muted{color:#6b7280;font-size:12px}</style></head><body><div id="app"></div><script> (async()=>{const mod=await import('./core.js'); const {DateTime}=luxon; const App=()=>{ const [roomId,setRoomId]=React.useState('Room-A'); const [date,setDate]=React.useState(DateTime.now().setZone(mod.state.timezone).toISODate()); const [start,setStart]=React.useState('10:00'); const [end,setEnd]=React.useState('12:00'); const [msg,setMsg]=React.useState(''); React.useEffect(()=>{mod.seedExamples();},[]); const toISO=(d,hm)=>{const [h,m]=hm.split(':').map(Number); return DateTime.fromISO(d,{zone:mod.state.timezone}).set({hour:h,minute:m,second:0,millisecond:0}).toISO();}; const check=()=>{const r=mod.isAvailable(roomId,toISO(date,start),toISO(date,end)); setMsg(r.available?'Available ✅':'Unavailable ❌ — '+(r.reason||''));}; const add=()=>{const r=mod.addBlackout(roomId,toISO(date,start),toISO(date,end),'Admin Blackout'); setMsg(r.ok?'Blackout added.':'Error: '+r.reason); force(v=>v+1);}; const [v,force]=React.useState(0); const events=(mod.state.calendars[roomId]||[]).slice().sort((a,b)=>a.startsAt.localeCompare(b.startsAt)); return React.createElement('div',{}, [ React.createElement('div',{className:'row',key:1},[ 'Room', React.createElement('select',{value:roomId,onChange:e=>setRoomId(e.target.value)},[React.createElement('option',{key:'A'},'Room-A'),React.createElement('option',{key:'B'},'Room-B')]), 'Date', React.createElement('input',{type:'date',value:date,onChange:e=>setDate(e.target.value)}), 'From', React.createElement('input',{type:'time',value:start,onChange:e=>setStart(e.target.value),step:900}), 'To', React.createElement('input',{type:'time',value:end,onChange:e=>setEnd(e.target.value),step:900}), React.createElement('button',{onClick:check},'Check'), React.createElement('button',{onClick:add},'Add Blackout') ]), React.createElement('div',{className:'muted',key:2},'Timezone '+mod.state.timezone+' • rounding '+(mod.state.pricing.roundingStep||15)+' mins'), React.createElement('div',{key:3},msg), React.createElement('table',{key:4},[React.createElement('thead',{key:'h'},React.createElement('tr',{},[React.createElement('th',{},'Title'),React.createElement('th',{},'Start'),React.createElement('th',{},'End')])), React.createElement('tbody',{key:'b'}, events.length? events.map(ev=>React.createElement('tr',{key:ev.id},[React.createElement('td',{},ev.title||ev.type),React.createElement('td',{},ev.startsAt),React.createElement('td',{},ev.endsAt)])): React.createElement('tr',{},React.createElement('td',{colSpan:3,className:'muted'},'No events yet.')) ) ]) ]); }; ReactDOM.createRoot(document.getElementById('app')).render(React.createElement(App)); })(); </script></body></html>
+
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Availability/Calendar Admin</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css">
+    <style>
+      body { font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Arial, "Apple Color Emoji","Segoe UI Emoji"; padding: 24px; }
+      .card { border:1px solid #e5e7eb; border-radius:16px; padding:16px; margin-bottom:16px; box-shadow: 0 1px 2px rgba(0,0,0,.04); }
+      .row { display:flex; gap:8px; align-items:center; margin: 8px 0; flex-wrap: wrap; }
+      input, select, button { padding: 8px 10px; border-radius: 10px; border:1px solid #d1d5db; }
+      button { cursor:pointer; }
+      table { width:100%; border-collapse: collapse; }
+      th, td { text-align:left; padding:8px; border-bottom:1px solid #eee; }
+      .muted { color:#6b7280; font-size: 12px; }
+      .pill { background:#eef2ff; color:#3730a3; padding:2px 8px; border-radius:999px; font-size:12px; }
+      .ok { color: #065f46; }
+      .bad { color: #991b1b; }
+    </style>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@3/build/global/luxon.min.js"></script>
+    <script type="module">
+      import coreUrl from './core.js?url';
+    </script>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="text/babel" data-presets="react">
+      const { useState, useEffect } = React;
+      const { DateTime } = luxon;
+
+      // load core via plain script tag alternative
+    </script>
+    <script>
+      // load core.js into window.module via dynamic import shim
+      (async () => {
+        const mod = await import('./core.js');
+        window.core = mod;
+
+        const App = () => {
+          const [roomId, setRoomId] = React.useState("Room-A");
+          const [date, setDate] = React.useState(DateTime.now().setZone(mod.state.timezone).toISODate());
+          const [start, setStart] = React.useState("10:00");
+          const [end, setEnd] = React.useState("12:00");
+          const [message, setMessage] = React.useState("");
+
+          React.useEffect(() => { mod.seedExamples(); }, []);
+
+          function toISO(d, hm) {
+            const [h, m] = hm.split(":").map(Number);
+            return DateTime.fromISO(d, { zone: mod.state.timezone }).set({ hour: h, minute: m, second:0, millisecond:0 }).toISO();
+          }
+
+          async function addBlackout() {
+            const res = mod.addBlackout(roomId, toISO(date, start), toISO(date, end), "Admin Blackout");
+            if (res.ok) setMessage("Blackout added.");
+            else setMessage("Error: " + res.reason);
+          }
+
+          function checkAvailability() {
+            const a = mod.isAvailable(roomId, toISO(date, start), toISO(date, end));
+            if (a.available) setMessage("Available ✅");
+            else setMessage("Unavailable ❌ — " + a.reason);
+          }
+
+          function remove(evId) {
+            const r = mod.removeEvent(roomId, evId);
+            setMessage(r.ok ? "Removed." : "Not found");
+            // force rerender
+            setTick(tick+1);
+          }
+
+          const [tick, setTick] = React.useState(0);
+          const events = (mod.state.calendars[roomId]||[]).slice().sort((a,b)=> a.startsAt.localeCompare(b.startsAt));
+
+          return (
+            <div>
+              <div className="card">
+                <h2>Availability & Blackouts <span className="pill">Admin</span></h2>
+                <div className="row">
+                  <label>Room</label>
+                  <select value={roomId} onChange={e=>setRoomId(e.target.value)}>
+                    <option>Room-A</option>
+                    <option>Room-B</option>
+                  </select>
+                  <label>Date</label>
+                  <input type="date" value={date} onChange={e=>setDate(e.target.value)} />
+                  <label>From</label>
+                  <input type="time" value={start} onChange={e=>setStart(e.target.value)} step="900" />
+                  <label>To</label>
+                  <input type="time" value={end} onChange={e=>setEnd(e.target.value)} step="900" />
+                  <button onClick={checkAvailability}>Check</button>
+                  <button onClick={addBlackout}>Add Blackout</button>
+                </div>
+                <div className="muted">Timezone: {mod.state.timezone} • Rounding step: {mod.state.pricing.roundingStep} mins</div>
+                <div style={{marginTop:8}} className={message.includes("Available")?"ok":"bad"}>{message}</div>
+              </div>
+
+              <div className="card">
+                <h3>Blackouts/Events for {roomId}</h3>
+                <table>
+                  <thead><tr><th>Title</th><th>Start</th><th>End</th><th></th></tr></thead>
+                  <tbody>
+                    {events.map(ev => (
+                      <tr key={ev.id}>
+                        <td>{ev.title||ev.type}</td>
+                        <td>{ev.startsAt}</td>
+                        <td>{ev.endsAt}</td>
+                        <td><button onClick={()=>{ mod.removeEvent(roomId, ev.id); setTick(tick+1); }}>Delete</button></td>
+                      </tr>
+                    ))}
+                    {events.length===0 && <tr><td colSpan="4" className="muted">No events yet.</td></tr>}
+                  </tbody>
+                </table>
+              </div>
+
+              <div className="card">
+                <h3>API Endpoints (same origin)</h3>
+                <pre className="muted">GET /availability?roomId=&from=&to=&hours=
+POST /blackout_periods
+DELETE /blackout_periods/:id</pre>
+                <p className="muted">This static admin calls pure functions directly; on Netlify/Vercel these routes are implemented as serverless functions.</p>
+              </div>
+            </div>
+          );
+        };
+
+        ReactDOM.createRoot(document.getElementById('app')).render(React.createElement(App));
+      })();
+    </script>
+  </body>
+</html>
