--- a/public/index.html
+++ b/public/index.html
@@ -27,110 +27,126 @@
       import coreUrl from './core.js?url';
     </script>
   </head>
-  <body>
-    <div id="app"></div>
-    <script type="text/babel" data-presets="react">
-      const { useState, useEffect } = React;
-      const { DateTime } = luxon;
-
-      // load core via plain script tag alternative
-    </script>
-    <script>
-      // load core.js into window.module via dynamic import shim
-      (async () => {
-        const mod = await import('./core.js');
-        window.core = mod;
-
-        const App = () => {
-          const [roomId, setRoomId] = React.useState("Room-A");
-          const [date, setDate] = React.useState(DateTime.now().setZone(mod.state.timezone).toISODate());
-          const [start, setStart] = React.useState("10:00");
-          const [end, setEnd] = React.useState("12:00");
-          const [message, setMessage] = React.useState("");
-
-          React.useEffect(() => { mod.seedExamples(); }, []);
-
-          function toISO(d, hm) {
-            const [h, m] = hm.split(":").map(Number);
-            return DateTime.fromISO(d, { zone: mod.state.timezone }).set({ hour: h, minute: m, second:0, millisecond:0 }).toISO();
-          }
-
-          async function addBlackout() {
-            const res = mod.addBlackout(roomId, toISO(date, start), toISO(date, end), "Admin Blackout");
-            if (res.ok) setMessage("Blackout added.");
-            else setMessage("Error: " + res.reason);
-          }
-
-          function checkAvailability() {
-            const a = mod.isAvailable(roomId, toISO(date, start), toISO(date, end));
-            if (a.available) setMessage("Available ✅");
-            else setMessage("Unavailable ❌ — " + a.reason);
-          }
-
-          function remove(evId) {
-            const r = mod.removeEvent(roomId, evId);
-            setMessage(r.ok ? "Removed." : "Not found");
-            // force rerender
-            setTick(tick+1);
-          }
-
-          const [tick, setTick] = React.useState(0);
-          const events = (mod.state.calendars[roomId]||[]).slice().sort((a,b)=> a.startsAt.localeCompare(b.startsAt));
-
-          return (
-            <div>
-              <div className="card">
-                <h2>Availability & Blackouts <span className="pill">Admin</span></h2>
-                <div className="row">
-                  <label>Room</label>
-                  <select value={roomId} onChange={e=>setRoomId(e.target.value)}>
-                    <option>Room-A</option>
-                    <option>Room-B</option>
-                  </select>
-                  <label>Date</label>
-                  <input type="date" value={date} onChange={e=>setDate(e.target.value)} />
-                  <label>From</label>
-                  <input type="time" value={start} onChange={e=>setStart(e.target.value)} step="900" />
-                  <label>To</label>
-                  <input type="time" value={end} onChange={e=>setEnd(e.target.value)} step="900" />
-                  <button onClick={checkAvailability}>Check</button>
-                  <button onClick={addBlackout}>Add Blackout</button>
-                </div>
-                <div className="muted">Timezone: {mod.state.timezone} • Rounding step: {mod.state.pricing.roundingStep} mins</div>
-                <div style={{marginTop:8}} className={message.includes("Available")?"ok":"bad"}>{message}</div>
-              </div>
-
-              <div className="card">
-                <h3>Blackouts/Events for {roomId}</h3>
-                <table>
-                  <thead><tr><th>Title</th><th>Start</th><th>End</th><th></th></tr></thead>
-                  <tbody>
-                    {events.map(ev => (
-                      <tr key={ev.id}>
-                        <td>{ev.title||ev.type}</td>
-                        <td>{ev.startsAt}</td>
-                        <td>{ev.endsAt}</td>
-                        <td><button onClick={()=>{ mod.removeEvent(roomId, ev.id); setTick(tick+1); }}>Delete</button></td>
-                      </tr>
-                    ))}
-                    {events.length===0 && <tr><td colSpan="4" className="muted">No events yet.</td></tr>}
-                  </tbody>
-                </table>
-              </div>
-
-              <div className="card">
-                <h3>API Endpoints (same origin)</h3>
-                <pre className="muted">GET /availability?roomId=&from=&to=&hours=
-POST /blackout_periods
-DELETE /blackout_periods/:id</pre>
-                <p className="muted">This static admin calls pure functions directly; on Netlify/Vercel these routes are implemented as serverless functions.</p>
-              </div>
-            </div>
-          );
-        };
-
-        ReactDOM.createRoot(document.getElementById('app')).render(React.createElement(App));
-      })();
-    </script>
-  </body>
 </html>
+<body>
+  <div id="app"></div>
+
+  <!-- 1) Load core.js as a module and attach it to window.mod -->
+  <script type="module">
+    import * as mod from '/core.js?v=4';
+    window.mod = mod; // make it available to the next script
+  </script>
+
+  <!-- 2) Use window.mod from a normal script -->
+  <script>
+    const { DateTime } = luxon;
+    const mod = window.mod;
+
+    const App = () => {
+      const [roomId, setRoomId] = React.useState("Room-A");
+      const [date, setDate] = React.useState(DateTime.now().setZone(mod.state.timezone).toISODate());
+      const [start, setStart] = React.useState("10:00");
+      const [end, setEnd] = React.useState("12:00");
+      const [msg, setMsg] = React.useState("");
+      const [preBuf, setPreBuf] = React.useState(mod.state.roomConfig[roomId]?.preBufferMins ?? 0);
+      const [postBuf, setPostBuf] = React.useState(mod.state.roomConfig[roomId]?.postBufferMins ?? 0);
+      const [tempAmt, setTempAmt] = React.useState(2);
+      const [tempUnit, setTempUnit] = React.useState("hours");
+      const [tick, setTick] = React.useState(0);
+
+      React.useEffect(()=>{ mod.seedExamples(); }, []);
+      React.useEffect(()=>{
+        setPreBuf(mod.state.roomConfig[roomId]?.preBufferMins ?? 0);
+        setPostBuf(mod.state.roomConfig[roomId]?.postBufferMins ?? 0);
+      }, [roomId]);
+
+      const toISO = (d, hm) => {
+        const [h,m] = hm.split(":").map(Number);
+        return DateTime.fromISO(d, { zone: mod.state.timezone }).set({ hour:h, minute:m, second:0, millisecond:0 }).toISO();
+      };
+
+      const check = () => {
+        const fromISO = toISO(date,start), toISOv = toISO(date,end);
+        const r = mod.isAvailable(roomId, fromISO, toISOv);
+        setMsg(r.available ? "Available ✅" : "Unavailable ❌ — " + (r.reason || ""));
+      };
+
+      const addBlk = () => {
+        const r = mod.addBlackout(roomId, toISO(date,start), toISO(date,end), "Admin Blackout");
+        setMsg(r.ok ? "Blackout added." : "Error: " + r.reason);
+        setTick(x=>x+1);
+      };
+
+      const addTemp = () => {
+        const r = mod.addTempBlackout(roomId, toISO(date,start), Number(tempAmt||0), tempUnit, "Temp Block");
+        setMsg(r.ok ? "Temp block added." : "Error: " + r.reason);
+        setTick(x=>x+1);
+      };
+
+      const saveBuffers = () => {
+        (mod.state.roomConfig[roomId] = mod.state.roomConfig[roomId] || {});
+        mod.state.roomConfig[roomId].preBufferMins  = Number(preBuf||0);
+        mod.state.roomConfig[roomId].postBufferMins = Number(postBuf||0);
+        setMsg("Buffers saved for " + roomId);
+      };
+
+      const events = (mod.state.calendars[roomId]||[]).slice().sort((a,b)=>a.startsAt.localeCompare(b.startsAt));
+
+      return React.createElement('div', {}, [
+        React.createElement('div', { className:'card', key:'controls' }, [
+          React.createElement('h2', {}, ['Availability & Blackouts ', React.createElement('span',{className:'pill'},'Admin')]),
+          React.createElement('div',{className:'row'},[
+            'Room', React.createElement('select',{value:roomId,onChange:e=>setRoomId(e.target.value)},[
+              React.createElement('option',{key:'A'},'Room-A'),
+              React.createElement('option',{key:'B'},'Room-B')
+            ]),
+            'Date', React.createElement('input',{type:'date',value:date,onChange:e=>setDate(e.target.value)}),
+            'From', React.createElement('input',{type:'time',value:start,onChange:e=>setStart(e.target.value),step:900}),
+            'To', React.createElement('input',{type:'time',value:end,onChange:e=>setEnd(e.target.value),step:900}),
+            React.createElement('button',{onClick:check},'Check'),
+            React.createElement('button',{onClick:addBlk},'Add Blackout')
+          ]),
+          React.createElement('div',{className:'row'},[
+            React.createElement('strong',{},'Temp block:'),'Duration',
+            React.createElement('input',{type:'number',min:1,style:{width:80},value:tempAmt,onChange:e=>setTempAmt(e.target.value)}),
+            React.createElement('select',{value:tempUnit,onChange:e=>setTempUnit(e.target.value)},[
+              React.createElement('option',{value:'hours'},'hours'),
+              React.createElement('option',{value:'days'},'days'),
+              React.createElement('option',{value:'weeks'},'weeks')
+            ]),
+            React.createElement('button',{onClick:addTemp},'Add Temp Block')
+          ]),
+          React.createElement('div',{className:'row'},[
+            React.createElement('strong',{},'Default buffers for room:'),
+            'Pre (mins)', React.createElement('input',{type:'number',min:0,style:{width:80},value:preBuf,onChange:e=>setPreBuf(e.target.value)}),
+            'Post (mins)', React.createElement('input',{type:'number',min:0,style:{width:80},value:postBuf,onChange:e=>setPostBuf(e.target.value)}),
+            React.createElement('button',{onClick:saveBuffers},'Save Buffers')
+          ]),
+          React.createElement('div',{className:'muted'},'“+01:00” is timezone (Irish Summer Time). Buffers are configurable above.'),
+          React.createElement('div',{style:{marginTop:8}}, msg)
+        ]),
+        React.createElement('div', { className:'card', key:'events' }, [
+          React.createElement('h3', {}, `Events for ${roomId}`),
+          React.createElement('table',{}, [
+            React.createElement('thead',{}, React.createElement('tr',{},[
+              React.createElement('th',{},'Type'),
+              React.createElement('th',{},'Title'),
+              React.createElement('th',{},'Start (EU)'),
+              React.createElement('th',{},'End (EU)'),
+              React.createElement('th',{},'')
+            ])),
+            React.createElement('tbody',{}, (events.length? events.map(ev => React.createElement('tr',{key:ev.id},[
+              React.createElement('td',{}, ev.type),
+              React.createElement('td',{}, ev.title||''),
+              React.createElement('td',{}, mod.eu(ev.startsAt)),
+              React.createElement('td',{}, mod.eu(ev.endsAt)),
+              React.createElement('td',{}, React.createElement('button',{onClick:()=>{ mod.removeEvent(roomId, ev.id); setTick(x=>x+1); }},'Delete'))
+            ])) : React.createElement('tr',{}, React.createElement('td',{colSpan:5, className:'muted'},'No events yet.'))))
+          ])
+        ])
+      ]);
+    };
+
+    ReactDOM.createRoot(document.getElementById('app')).render(React.createElement(App));
+  </script>
+</body>
