--- a/public/index.html
+++ b/public/index.html
@@ -193,7 +193,7 @@
             'Date', React.createElement('input',{type:'date',value:date,onChange:e=>setDate(e.target.value)}),
             'From', React.createElement('input',{type:'time',value:start,onChange:e=>setStart(e.target.value),step:900}),
             'To', React.createElement('input',{type:'time',value:end,onChange:e=>setEnd(e.target.value),step:900}),
-            React.createElement('button',{onClick:check},'Check'),
+            React.createElement('button',{onClick:check},'Check Availability'),
             React.createElement('button',{onClick:addBlk},'Add Blackout')
           ]),
           React.createElement('div',{className:'row'},[
